# cuda_playground

./: .gitignore  CMakeLists.txt  check_hunyuan.py  check_tensor.py  gpu_info.txt  run.sh
flash_attention/: main.cu
hgemm/: hgemm_wmma.cu  main.cu
hgemm_cute/: main.cu
hgemm_cutlass/: main.cu
mat_add/: main.cu
online_softmax/: main.cu
reduce_sum/: main.cu
sgemm/: main.cu
test_cublass/: main.cu
try_cutlass/: main.cu  main_16_8_16.cu  main_16_8_32.cu  main_16_8_8.cu  main_cublass.cu
utils/: ptx.cuh  utils.cuh
